--- a/Week 1/Bootstrap4/conFusion/package.json
+++ b/Week 1/Bootstrap4/conFusion/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "./node_modules/lite-server/bin/lite-server"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +14,6 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
+    "bootstrap": "^4.0.0-alpha.6"
   }
 }
